# django_artisan

./: .gitignore  MANIFEST.in  README.md  setup.cfg
django_artisan/: admin.py  apps.py  checks.py  django_artisan  forms.py  models.py  tasks.py  views.py
django_artisan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_artisan/management/commands/: makeusers.py
django_artisan/migrations/: 0006_alter_userproductimage_file.py  0007_alter_post_author.py
django_artisan/static/django_artisan/css/: styles.css
django_artisan/templates/django_artisan/: base.html
django_artisan/templates/django_artisan/carousel/: carousel.html
django_artisan/templates/django_artisan/posts_and_comments/: comment.html  post.html  post_list.html
django_artisan/templates/django_artisan/profile/images/: image_update.html
django_artisan/templates/fields/: artisan_file_clear_input.html
django_forum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
