[metadata]
name = django_artisan
version = 1.0
data_files=[],
description = django_artisan is an app that provides a simple multi-tenanted website for ceramicists, artists, potters or any other artist's collective.
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/django_artisan
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.9 # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    django-crispy-forms;python_version=='1.11.2'
    crispy-bootstrap5;python_version=='5.0.6'
    fuzzywuzzy;python_version=='0.18.0'
    django-recaptcha;python_version=='2.0.6'
    elasticsearch;python_version=='7.12.0'
    elasticsearch-dsl;python_version=='7.3.0'
    django-elasticsearch-dsl;python_version=='7.1.4'
    django-tinymce;python_version=='3.3.0'
    django-q;python_version=='1.3.8'
    fuzzywuzzy;python_version=='0.18.0'
    random_username;python_version=='1.0.2'
    sorl-thumbnail;python_version=='12.7.0'
    django_forum@git+https://github.com/millerthegorilla/django_forum
    asgiref;python_version=='3.3.3'