[metadata]
name = django_artisan
version = 1.0
data_files=[],
description = "django_artisan is an app that provides a simple multi-tenanted website for ceramicists, artists, potters or any other artist's collective."
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/django_artisan
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.9 # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    django_forum@git+https://github.com/millerthegorilla/django_forum
